# tilck

./: CMakeLists.txt  compile_commands.json
config/: config_debug.h
kernel/: main.c
kernel/arch/i386/: CMakeLists.txt
modules/nasibu/: Cargo.toml  build.rs  build.sh  clean.sh  nasibu.h  rust-toolchain.toml  target.json  tilck.rs  wrapper.h
modules/nasibu/src/: alloc.rs  allocator.rs  lib.rs  valloc.rs
