[package]
name = "nasibu"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
cty = "0.2.2"

[profile.release]
panic = "abort"
split-debuginfo = "packed"

[profile.dev]
panic = "abort"
split-debuginfo = "packed"

[build-dependencies]
bindgen = "0.59.2"
cbindgen = "0.20.0"
